# analyze-activities

./: .gitignore  .pre-commit-config.yaml  README.md  cspell-words.txt  cspell.config.yaml  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: check.yml
scripts/: update.sh
src/: ai_ollama.py  ai_ollama_prompt.md  cal.py  git_1_export_history.sh  git_2_analyze.py  helper.py  influx_1_download.py  influx_2.py  influx_creds-EXAMPLE.py  join.py  journal.py  lifelog.py  name_fix-EXAMPLE.py  oura.py  rtm.py  run-all.sh  strava.py
src/deprecated/: influx_2_pandas.py  strava_excel.py  test_strava_excel.py
tests/: test_cal.py  test_git_2_analyze.py  test_helper.py  test_influx.py  test_journal.py  test_lifelog.py  test_oura.py  test_rtm.py  test_strava.py
tests/testdata/: cal.ics  influx-media.csv  journal.md  oura.csv  rtm.csv  strava.ics
