[project]
name = "analyze-activities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["icalendar>=7.0.0", "influxdb>=5.3.2"]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.6"]
